--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,5 @@
-[build];
-functions = "netlify/functions"[functions];
-node_bundler = "esbuild";
+[build]
+  functions = "netlify/functions"
+
+[functions]
+  node_bundler = "esbuild"
